name:                ErrorProp

-- The package version.  See the Haskell package versioning policy (PVP) 
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.3.1.0

-- A short (one-line) description of the package.
synopsis:            Error propagation library.
-- description:         
homepage:            github.com/hepek/ErrorProp
license:             GPL-2
license-file:        LICENSE
author:              Milan Markovic
maintainer:          zivotinja@gmail.com

category:            Math

build-type:          Simple
-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >=1.8

library
  exposed-modules:   Math.ErrorProp
  other-modules:     Math.Symbolic, Math.SimpleMx
  build-depends:     base >= 3.0, split >= 0.2
  hs-source-dirs:    src
